# ESP32-C6-SmartHome-Hub

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
docs/: DEBUGGING.md
src/cli/: CMakeLists.txt  cli_manager.cpp
src/cli/include/: cli_manager.h
src/connectivity/: CMakeLists.txt  bluetooth_manager.cpp  uart_link.cpp  wifi_manager.cpp  zigbee_link.cpp  zigbee_manager.cpp
src/connectivity/include/: bluetooth_manager.h  uart_link.h  wifi_manager.h  zigbee_link.h  zigbee_manager.h
src/debug/: CMakeLists.txt  debug_stub.c
src/debug/include/debug/: Debug.h
src/drivers/: CMakeLists.txt  led_driver.cpp
src/drivers/include/: led_driver.h
src/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
